--- a/iron-form.html
+++ b/iron-form.html
@@ -365,7 +365,7 @@ attach it to the `<iron-form>`:
         this.request.withCredentials = this.withCredentials;
         this.request.headers = this.headers;
 
-        if (this._form.method.toUpperCase() !== 'GET') {
+        if (this.request.method.toUpperCase() !== 'GET') {
           this.request.body = json;
         } else {
           this.request.params = json;
