--- a/iron-form.html
+++ b/iron-form.html
@@ -88,36 +88,13 @@ attach it to the `<iron-form>`:
     </style>
 
     <!-- This form is used to collect the elements that should be submitted -->
-    <slot></slot>
+    <slot id="content"></slot>
 
     <!-- This form is used for submission -->
     <form id="helper" action$="[[action]]" method$="[[method]]" enctype$="[[enctype]]"></form>
   </template>
 
   <script>
-  (function() {
-    function isSubmittable(node, ignoreName) {
-      return  (!node.disabled && (ignoreName || node.name));
-    }
-
-    function handleSubmittableInSlot(submittable, node, ignoreName) {
-      var assignedNodes = Polymer.dom(node).getDistributedNodes();
-
-      for (var i = 0; i < assignedNodes.length; i++) {
-        if (assignedNodes[i].nodeType === Node.TEXT_NODE) {
-          continue;
-        }
-
-        var nestedAssignedNodes = Polymer.dom(assignedNodes[i]).queryDistributedElements('*');
-
-        for (var j = 0; j < nestedAssignedNodes.length; j++) {
-          if (isSubmittable(nestedAssignedNodes[j], ignoreName)) {
-            submittable.push(nestedAssignedNodes[j]);
-          }
-        }
-      }
-    }
-
     Polymer({
       is: 'iron-form',
 
@@ -190,32 +167,17 @@ attach it to the `<iron-form>`:
       */
 
       attached: function() {
-        this._nodeObserver = Polymer.dom(this).observeNodes(
-          function(mutations) {
-            for (var i = 0; i < mutations.addedNodes.length; i++) {
-              if (mutations.addedNodes[i].tagName === 'FORM' && !this._alreadyCalledInit) {
-                this._alreadyCalledInit = true;
-                this._form = mutations.addedNodes[i];
-                this._init();
-              }
-            }
-          }.bind(this));
+        this._saveDefaultValues();
       },
 
       detached: function() {
-        if (this._nodeObserver) {
-          Polymer.dom(this).unobserveNodes(this._nodeObserver);
-          this._nodeObserver = null;
-        }
+        this._removeSlotListeners();
       },
 
-      _init: function() {
-        this._form.addEventListener('submit', this.submit.bind(this));
-        this._form.addEventListener('reset', this.reset.bind(this));
-
-        // Save the initial values.
+      _saveDefaultValues: function() {
+        var nodes = this._getFormElements();
         this._defaults = this._defaults || new WeakMap();
-        var nodes = this._getSubmittableElements();
+        var nodes = this._getFormElements();
         for (var i = 0; i < nodes.length; i++) {
           var node = nodes[i];
           if (!this._defaults.has(node)) {
@@ -256,18 +218,17 @@ attach it to the `<iron-form>`:
        */
       submit: function(event) {
         // We are not using this form for submission, so always cancel its event.
-        if (event) {
+        if (event)
           event.preventDefault();
-        }
 
         // If you've called this before distribution happened, bail out.
-        if (!this._form) {
+        if (!this._form || !this.validate()) {
           return;
         }
 
-        if (!this.validate()) {
-          this.fire('iron-form-invalid');
-          return;
+        // Remove any existing children in the submission form (from a previous submit).
+        while (this.$.helper.children.length !== 0) {
+          this.$.helper.removeChild(this.$.helper.children[0]);
         }
 
         // Remove any existing children in the submission form (from a previous submit).
@@ -279,7 +240,7 @@ attach it to the `<iron-form>`:
         if (this.allowRedirect) {
           // If we're submitting the form natively, then create a hidden element for
           // each of the values.
-          for (var element in json) {
+          for (element in json) {
             this.$.helper.appendChild(this._createHiddenElement(element, json[element]));
           }
 
@@ -304,18 +265,21 @@ attach it to the `<iron-form>`:
           event.preventDefault();
 
         // If you've called this before distribution happened, bail out.
-        if (!this._form) {
+        if (!this._form)
           return;
-        }
 
         // Load the initial values.
-        var nodes = this._getSubmittableElements();
+        var nodes = this._getFormElements();
         for (var i = 0; i < nodes.length; i++) {
           var node = nodes[i];
           if (this._defaults.has(node)) {
             var defaults = this._defaults.get(node);
-            node.value = defaults.value;
-            node.checked = defaults.checked;
+            if (node.value != null) {
+              node.value = defaults.value;
+            }
+            if (node.checked != null) {
+              node.checked = defaults.checked;
+            }
           }
         }
       },
@@ -380,31 +344,78 @@ attach it to the `<iron-form>`:
       },
 
       _getValidatableElements: function() {
-        return this._findElements(this._form, true);
+        var nodes = this._getFormElements();
+        var validatable = [];
+
+        for (var i = 0; i < nodes.length; i++) {
+          var el = nodes[i];
+          if (!el.disabled) {
+            validatable.push(el);
+          }
+        }
+        return validatable;
+      },
+
+      _removeSlotListeners: function(slot) {
+        if (!slot) slot = this.$.content;
+        if (slot.tagName !== "SLOT") return;
+        if (slot.__formListener) {
+          slot.removeEventListener('slotchange', slot.__formListener);
+          delete slot.__formListener;
+        }
+        this._forEachDistributedElement(slot, this._removeSlotListeners.bind(this));
+      },
+
+      _forEachDistributedElement: function(slot, handler) {
+        var roots = slot.assignedNodes().filter(function(n) {
+          return n.nodeType === Node.ELEMENT_NODE;
+        });
+        for (var rootNo = 0; rootNo < roots.length; rootNo++) {
+          var root = roots[rootNo];
+          handler(root);
+          var children = root.querySelectorAll('*');
+          for (var nodeNo = 0; nodeNo < children.length; nodeNo++) {
+            handler(children[nodeNo]);
+          }
+        }
+      },
+
+      _getFormElements: function(slot) {
+        if (!slot) slot = this.$.content;
+        if (!slot.__formListener) {
+          slot.__formListener = (function() {
+            this._saveDefaultValues(slot);
+          }).bind(this);
+          slot.__formListener();
+          slot.addEventListener('slotchange', slot.__formListener);
+        }
+        var result = [];
+        this._forEachDistributedElement(slot, (function(el) {
+          if (el !== this._form && el.tagName === "FORM") {
+            this._form = el;
+            this._form.addEventListener('submit', this.submit.bind(this));
+            this._form.addEventListener('reset', this.reset.bind(this));
+          } else if (el.tagName === "SLOT") {
+            var additionalElements = this._getFormElements(el);
+            result.push.apply(result, additionalElements);
+          } else {
+            result.push(el);
+          }
+        }).bind(this));
+        return result;
       },
 
       _getSubmittableElements: function() {
-        return this._findElements(this._form, false);
-      },
-
-      _findElements: function(parent, ignoreName) {
-        var nodes = Polymer.dom(parent).querySelectorAll('*');
+        var nodes = this._getFormElements();
         var submittable = [];
 
         for (var i = 0; i < nodes.length; i++) {
-          var additionalElements = [];
-          var node = nodes[i];
+          var el = nodes[i];
 
-          if (node.localName === 'slot' || node.localName === 'content') {
-            handleSubmittableInSlot(submittable, node, ignoreName);
-          } else if (isSubmittable(node, ignoreName)) {
-            additionalElements = [node];
-          } else if (node.root) {
-            additionalElements = this._findElements(node.root, ignoreName)
-          }
-
-          if (additionalElements.length) {
-            Array.prototype.push.apply(submittable, additionalElements);
+          // An element is submittable if it is not disabled, and if it has a
+          // 'name' attribute.
+          if (!el.disabled && el.name) {
+            submittable.push(el);
           }
         }
         return submittable;
@@ -491,6 +502,5 @@ attach it to the `<iron-form>`:
         }
       }
     });
-  })();
   </script>
 </dom-module>
